--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ body {
 }
 
 main {
-  width: 100%;
+  width: 20rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   main {
-    width: 20rem;
+    width: 100%;
   }
 }
 
