--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 100%;
-  margin: 0;
+  margin: 0rem;
   padding: 0rem 1rem;
 }
 
 main {
   width: 20rem;
+  margin-top: 6rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -23,5 +23,57 @@ main {
 
 a {
   color: #21aa6a;
-  text-decoration: none;
+}
+
+h2 {
+  font-size: 1rem;
+}
+
+#description {
+  margin-bottom: 3rem;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin: 0rem;
+  padding: 0rem;
+}
+
+.accordion {
+  display: flex;
+  flex-direction: column;
+}
+
+.accordion div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.accordion svg {
+  rotate: 0deg;
+  transition: rotate 0.2s ease-in-out;
+}
+
+.active svg {
+  rotate: 90deg;
+}
+
+.accordion p {
+  margin: 0;
+  padding: 0;
+  font-weight: 500;
+  visibility: hidden;
+  transition: height 0.5s ease-in-out;
+  height: 0rem;
+  overflow: hidden;
+}
+
+.active p {
+  height: 3rem;
+  display: block;
+  visibility: visible;
 }
